several Updates & bug fix for scrollbar in CommitDetails cmp

--- a/src/Components/GitMyCareer/CommitDetails/CommitDetails.css
+++ b/src/Components/GitMyCareer/CommitDetails/CommitDetails.css
@@ -1,18 +1,17 @@
 .CommitDetails{
-    overflow: auto;
+    overflow: hidden;
     border-radius: 10px;
     float: left;
     margin: 20px auto;
-    background: rgba(0, 0, 0, 0.267);
     width: 55%;
     height: 500px;
+    background: rgba(70, 70, 70, 0.267);
+    box-sizing: border-box;  
 }
 
-.Commit{
-    background: rgba(70, 70, 70, 0.267);
-    width: 100%;
-    padding: 20px 20px 10px 20px;
-    box-sizing: border-box;
+.CommitDetails h2{
+    margin-left:20px;
+    margin-right:20px;
 }
 .Message{
     position: relative;
@@ -30,11 +29,9 @@
     left: 0;
 }
 
-.Commit article{
+.CommitDetails article{
     display: block;
     background: rgba(0, 0, 0, 0.246);
-    margin: 50px 0 0 -15px;
-    padding: 10px 10px 20px 10px ;
+    padding: 10px 20px 50px 20px ;
     text-align: left;
-    
 }
